--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,11 @@ python-multipart==0.0.6
 pdfplumber==0.10.3
 python-docx==1.1.0
 
+# 简历导出
+xhtml2pdf==0.2.13
+reportlab==4.0.7
+markdown==3.5.1
+
 # AI 服务
 openai==1.7.2
 anthropic==0.40.0
