deploy: 添加 Render 自动部署配置文件和 Docker 镜像定义

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,27 +1,22 @@
-FROM python:3.11-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
-# 安装系统依赖
+# 安装系统依赖，包括解析 PDF 所需的库
 RUN apt-get update && apt-get install -y \
-    gcc \
-    postgresql-client \
+    build-essential \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# 复制依赖文件
+# 复制依赖文件并安装
 COPY requirements.txt .
-
-# 安装 Python 依赖
 RUN pip install --no-cache-dir -r requirements.txt
 
 # 复制应用代码
 COPY . .
 
-# 创建上传目录
-RUN mkdir -p uploads/resumes uploads/temp
-
 # 暴露端口
 EXPOSE 8000
 
-# 启动命令
+# 运行应用
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
