--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,23 @@
-FROM node:18-alpine
+# 使用轻量级 Node 镜像进行构建
+FROM node:18-alpine as build-stage
 
 WORKDIR /app
 
-# 复制 package 文件
 COPY package*.json ./
-
-# 安装依赖
 RUN npm install
 
-# 复制应用代码
 COPY . .
+# 这里的环境变量会被编译进前端代码
+RUN npm run build
 
-# 暴露端口
-EXPOSE 5173
+# 使用 Nginx 作为静态资源服务器
+FROM nginx:stable-alpine as production-stage
 
-# 启动命令
-CMD ["npm", "run", "dev", "--", "--host"]
+COPY --from=build-stage /app/dist /usr/share/nginx/html
+
+# 复制自定义 Nginx 配置（处理 React Router 路由）
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
