--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,12 @@ services:
   - type: web
     name: ai-resume-backend
     env: python
+    plan: free # 显式指定免费计划
     buildCommand: cd backend && pip install -r requirements.txt
     startCommand: cd backend && uvicorn app.main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: DATABASE_URL
-        sync: false # 请在 Render 后台填入您的 Supabase 链接
+        sync: false
       - key: OPENAI_API_KEY
         sync: false
       - key: PORT
@@ -17,6 +18,7 @@ services:
   - type: web
     name: ai-resume-frontend
     env: static
+    plan: free # 静态站点在 Render 本身就是免费的
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: ./frontend/dist
     envVars:
