--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,39 +1,91 @@
-# Web 框架
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-
-# 数据库
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
-alembic==1.13.1
-
-# 缓存和任务队列
-redis==5.0.1
-celery==5.3.4
-
-# 数据验证
-pydantic==2.5.3
-pydantic-settings==2.1.0
-
-# 认证
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-
-# 文件处理
-python-multipart==0.0.6
-pdfplumber==0.10.3
-python-docx==1.1.0
-
-# 简历导出
-xhtml2pdf==0.2.13
-reportlab==4.0.7
-markdown==3.5.1
-
-# AI 服务
-openai==1.7.2
+aiosmtplib==5.1.0
+amqp==5.3.1
+annotated-doc==0.0.4
+annotated-types==0.7.0
 anthropic==0.40.0
-
-# 工具
-python-dotenv==1.0.0
-httpx==0.26.0
-beautifulsoup4==4.12.3
+anyio==4.12.1
+arabic-reshaper==3.0.0
+asn1crypto==1.5.1
+beautifulsoup4==4.14.3
+billiard==4.2.4
+careerjet-api==3.2
+celery==5.6.2
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+cryptography==46.0.4
+cssselect2==0.8.0
+distro==1.9.0
+ecdsa==0.19.1
+fastapi==0.128.4
+freetype-py==2.3.0
+greenlet==3.3.1
+h11==0.16.0
+html5lib==1.1
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+jiter==0.13.0
+kombu==5.6.2
+lxml==6.0.2
+Markdown==3.5.1
+openai==2.17.0
+oscrypto==1.3.0
+packaging==26.0
+passlib==1.7.4
+pdfminer.six==20251230
+pdfplumber==0.11.9
+pillow==12.1.0
+playwright==1.58.0
+prompt_toolkit==3.0.52
+pyasn1==0.6.2
+pycairo==1.29.0
+pycparser==3.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+pyee==13.0.0
+pyHanko==0.32.0
+pyhanko-certvalidator==0.29.0
+pypdf==6.6.2
+pypdfium2==5.3.0
+python-bidi==0.6.7
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.2.1
+python-jose==3.5.0
+python-multipart==0.0.22
+PyYAML==6.0.3
+redis==7.1.0
+reportlab==4.0.7
+requests==2.32.5
+rlPyCairo==0.4.0
+rsa==4.9.1
+setuptools==82.0.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8.3
+SQLAlchemy==2.0.46
+starlette==0.52.1
+svglib==1.5.1
+tinycss2==1.5.1
+tqdm==4.67.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
+uritools==6.0.1
+urllib3==2.6.3
+uvicorn==0.40.0
+uvloop==0.22.1
+vine==5.1.0
+watchfiles==1.1.1
+wcwidth==0.6.0
+webencodings==0.5.1
+websockets==16.0
+xhtml2pdf==0.2.13
