--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ python-dotenv>=1.0.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.9
 httpx>=0.24.0
 openai>=1.0.0
 python-docx>=1.0.0
